# MarklessAR_Android

./: README.md
app/: CMakeLists.txt  build.gradle  proguard-rules.pro
app/src/main/: AndroidManifest.xml
app/src/main/cpp/: ml_ar.cpp
app/src/main/cpp/include/: ARDrawingContext.hpp  ARPipeline.hpp  CameraCalibration.hpp  DebugHelpers.hpp  GeometryTypes.hpp  Pattern.hpp  PatternDetector.hpp
app/src/main/cpp/src/: ARDrawingContext.cpp  ARPipeline.cpp  CameraCalibration.cpp  GeometryTypes.cpp  Pattern.cpp  PatternDetector.cpp
app/src/main/java/com/example/lab213/marklessar/: MainActivity.java  NDKLoader.java
app/src/main/res/layout/: activity_main.xml
app/src/main/res/values/: strings.xml
